load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = ".",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/astaxie/beego:go_default_library",
        "@com_gitlab_higkoohk_mash//routers:go_default_library",
    ],
)

go_binary(
    name = "Mash",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
