load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["router.go"],
    importpath = "routers",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/astaxie/beego:go_default_library",
        "@com_gitlab_higkoohk_mash//controllers:go_default_library",
    ],
)
