load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["router.go"],
    importpath = "gitlab.com/higkoohk/Mash/routers",
    visibility = ["//visibility:public"],
    deps = [
        "//controllers:go_default_library",
        "//vendor/github.com/astaxie/beego:go_default_library",
    ],
)
